--- a/FinalWebApp/FinalWebApp/Views/Users/Login.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Users/Login.cshtml
@@ -18,7 +18,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <input type="submit" class="btn btn-primary" value="Sing in">
+                <input type="submit" class="btn btn-primary" value="Sign in">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </form>
