order summery view

--- a/FinalWebApp/FinalWebApp/wwwroot/css/site.css
+++ b/FinalWebApp/FinalWebApp/wwwroot/css/site.css
@@ -129,3 +129,9 @@ body {
     border: groove;
     border-color: aqua;
 }
+
+.summery-view{
+    background-color: white;
+    margin-top: 4rem;
+    padding: 3rem;
+}
