--- a/FinalWebApp/FinalWebApp/Views/Orders/SummeryView.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Orders/SummeryView.cshtml
@@ -6,3 +6,4 @@
 <h2>Order Succeseded</h2>
 <h4>No. @ViewBag.orderId</h4>
 
+<div class="fb-comments" data-href="https://developers.facebook.com/docs/plugins/comments#Products" data-numposts="5" data-order-by="time"></div>
