hotel details in order summery

--- a/FinalWebApp/FinalWebApp/Views/Orders/SummeryView.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Orders/SummeryView.cshtml
@@ -27,6 +27,14 @@
                 <td>@Html.DisplayFor(model => model.Email)</td>
             </tr>
             <tr>
+                <td>Hotel name</td>
+                <td>@Html.DisplayFor(model => model.Hotel.Name)</td>
+            </tr>
+            <tr>
+                <td>Hotel address</td>
+                <td>@Html.DisplayFor(model => model.Hotel.Address)</td>
+            </tr>
+            <tr>
                 <td>Check In Date</td>
                 <td>@Html.DisplayFor(model => model.CheckInDate)</td>
             </tr>
