--- a/FinalWebApp/FinalWebApp/Views/_ViewSearch.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/_ViewSearch.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="row">
     <div class="input-group">
         <form action="/search" method="get" id="search-form">
-            <input type="text" autofocus="true" class="form-control" name="place" placeholder="Hotel, City, Country...">
+            <input type="text" required autofocus class="form-control" name="place" placeholder="Hotel, City, Country...">
         </form>
         <span class="input-group-btn">
             <button class="btn btn-info" type="submit" form="search-form">Search</button>
