--- a/FinalWebApp/FinalWebApp/Views/Home/Index.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Home/Index.cshtml
@@ -2,12 +2,12 @@
     ViewData["Title"] = "Home Page";
 }
 
-<<div class="container-fluid">
+<div class="container-fluid">
     <div class="row search-form">
         <div class="col-md-4">
             <div class="search-item">
                 <form action="/search" method="get" id="search-form">
-                    <input type="text" autofocus="true" class="form-control" name="place" placeholder="Hotel, City, Country...">
+                    <input type="text" autofocus required class="form-control" name="place" placeholder="Hotel, City, Country...">
                 </form>
             </div>
         </div>
