add print errors for user

--- a/FinalWebApp/FinalWebApp/Views/Home/Index.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Home/Index.cshtml
@@ -12,11 +12,11 @@
             </div>
         </div>
         <div class="col-md-3">
-            <label>Enter date</label>
+            <label>Check In</label>
             <input id="endDate" class="form-control" type="date" form="search-form" name="checkin" />
         </div>
         <div class="col-md-3">
-            <label>Leave date</label>
+            <label>Check Out</label>
             <input id="startDate" class="form-control" type="date" form="search-form" name="checkout"/>
         </div>
         <div class="col-md-2">
