Adding an infrastructure to the machine learning - try our special search

--- a/FinalWebApp/FinalWebApp/Views/Home/Index.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Home/Index.cshtml
@@ -13,11 +13,11 @@
         </div>
         <div class="col-md-3">
             <label>Enter date</label>
-            <input id="endDate" class="form-control" type="date" form="search-form" name="checkin" />
+            <input id="endDate" class="dates" type="date" form="search-form" name="checkin" />
         </div>
         <div class="col-md-3">
             <label>Leave date</label>
-            <input id="startDate" class="form-control" type="date" form="search-form" name="checkout"/>
+            <input id="startDate" class="dates" type="date" form="search-form" name="checkout"/>
         </div>
         <div class="col-md-2">
             <div class="input-group-btn search-item">
