--- a/FinalWebApp/FinalWebApp/Views/_ViewStatistics.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/_ViewStatistics.cshtml
@@ -1,1 +1,7 @@
-﻿<!DOCTYPE html>
+﻿<div class="statistics-container container col-md-7 col-centered">
+    <span class="col-centered" id="StatisticsGraph1"></span>
+    <span class="col-centered" id="StatisticsGraph2"></span>
+    <br />
+    <span>orders in cities</span>
+    <span>hotels in top city</span>
+</div>
