--- a/FinalWebApp/FinalWebApp/Views/Shared/_Layout.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
     <title>@ViewData["Title"] - FinalWebApp</title>
 
     <environment include="Development">
@@ -49,12 +50,12 @@
                 </div>
             }
         </div>
-        @if (Globals.isAdminConnected(Context.Session))
+        @if (!Globals.isAdminConnected(Context.Session))
         {
-            <button class="btn btn-outline-info" id="statisticButton" data-target="#statisticView" data-toggle="modal"
-                    type="button">
-                Statistics
-            </button>
+            <form id="StatisticsForm" action="/Home/Statistics" method="post">
+                <input value="Statistics" class="btn btn-outline-info" id="statisticsButton"
+                       type="submit" data-toggle="modal" data-target="#statisticView">
+            </form>
         }
         @if (Globals.getConnectedUser(Context.Session) == null)
         {
@@ -84,7 +85,7 @@
             @Html.Partial("~/Views/Users/Register.cshtml")
         </div>
 
-		<div class="modal fade" id="statisticView">
+		<div class="modal fade" id="statisticView" role="dialog">
 			@Html.Partial("~/Views/_ViewStatistics.cshtml")
 		</div>
 
@@ -102,6 +103,9 @@
             <script src="~/lib/jquery/dist/jquery.js"></script>
             <script src="~/lib/bootstrap/js/bootstrap.js"></script>
             <script src="~/js/site.js" asp-append-version="true"></script>
+            <script type="text/javascript" src="http://mbostock.github.com/d3/d3.js?2.1.3"></script>
+            <script type="text/javascript" src="http://mbostock.github.com/d3/d3.geom.js?2.1.3"></script>
+            <script type="text/javascript" src="http://mbostock.github.com/d3/d3.layout.js?2.1.3"></script>
         </environment>
         <environment exclude="Development">
             <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
