--- a/FinalWebApp/FinalWebApp/wwwroot/css/site.css
+++ b/FinalWebApp/FinalWebApp/wwwroot/css/site.css
@@ -8,6 +8,23 @@ for details on configuring this project to bundle and minify static web assets. 
 	src: local('Varela Round Regular'), local('VarelaRound-Regular'), url(https://fonts.gstatic.com/s/varelaround/v10/w8gdH283Tvk__Lua32TysjIfp8uP.woff2) format('woff2');
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+.col-centered {
+    float: none;
+    margin: 0 auto;
+}
+.statistics-container  {
+    margin-top: 5rem;
+    padding: 5rem;
+    text-align: center;
+    background-color: whitesmoke;
+    border-radius: 1rem;
+}
+.statistics-container span {
+    margin: 2.5rem;
+}
+.statistics-container button {
+    bottom: 0.5rem;
+}
 
 body {
     padding-top: 50px;
