--- a/FinalWebApp/FinalWebApp/wwwroot/css/site.css
+++ b/FinalWebApp/FinalWebApp/wwwroot/css/site.css
@@ -26,9 +26,12 @@ for details on configuring this project to bundle and minify static web assets. 
     bottom: 0.5rem;
 }
 
+footer {
+    bottom: 0;
+}
+
 body {
     padding-top: 50px;
-    //padding-bottom: 20px;
     background: url(../images/mainBackground1.jpg) no-repeat center fixed;
     background-size: cover;
 }
