--- a/FinalWebApp/FinalWebApp/Views/Search/Results.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Search/Results.cshtml
@@ -41,7 +41,7 @@
 <ul class="hotel-result-list">
     @foreach (var hotel in Model.hotels)
     {
-        <li class="row">
+        <li class="row hotel-result">
             <div class="col-md-3 hotel-image">
                 <img src="~/images/HotelsImages/@hotel.Id/image.jpg" style="object-fit:cover; width:100%" />
             </div>
