--- a/FinalWebApp/FinalWebApp/wwwroot/css/site.css
+++ b/FinalWebApp/FinalWebApp/wwwroot/css/site.css
@@ -26,14 +26,11 @@ for details on configuring this project to bundle and minify static web assets. 
     bottom: 0.5rem;
 }
 
-footer {
-    bottom: 0;
-}
-
 body {
+    height: 100%;
     padding-top: 50px;
-    background: url(../images/mainBackground1.jpg) no-repeat center fixed;
     background-size: cover;
+    background: url(../images/mainBackground1.jpg) no-repeat center fixed;
 }
 
 /* Wrapping element */
@@ -168,16 +165,37 @@ body {
 .navbar-buttons{
     right: 0;
 }
+body .container{
+    height:100%;
+}
+
 .footer {
-    
+    position: fixed;
+    text-align: center;
+    column-count: 3;
     background-color: darkslategray;
-    margin-top: 8rem;
     left: 0;
     right: 0;
     bottom: 0;
 }
 
+.footer div{
+    padding-top: 1rem;
+}
+
 .hotel-result {
     overflow: hidden;
     border-radius: .8rem;
+}
+
+.footer-link:hover {
+    cursor: pointer;
+}
+
+p {
+    color: white;
+}
+
+footer {
+    bottom: 0;
 }
