--- a/FinalWebApp/FinalWebApp/Views/Shared/_Layout.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Shared/_Layout.cshtml
@@ -96,99 +96,27 @@
         <!--<hr />-->
 
     </div>
+    
     <!-- Footer -->
-    <footer class=footer " page-footer font-small mdb-color pt-4">
-
-        <!-- Footer Links -->
-        <div class="container text-center text-md-left">
-
-            <!-- Footer links -->
-            <div class="row text-center text-md-left mt-3 pb-3">
-
-                <!-- Grid column -->
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-                    <h6 class="text-uppercase mb-4 font-weight-bold">Holidai</h6>
-                    <p>
-                        CS 2019 Final project.
-                    </p>
-                </div>
-                <!-- Grid column -->
-
-                <hr class="w-100 clearfix d-md-none">
-
-                <!-- Grid column -->
-                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
-
-                </div>
-                <!-- Grid column -->
-
-                <hr class="w-100 clearfix d-md-none">
-
-                <!-- Grid column -->
-                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h6 class="text-uppercase mb-4 font-weight-bold">Useful links</h6>
-                    <p>
-                        <a href="#!">Banck Hpoalim</a>
-                    </p>
-                    <p>
-                        <a href="#!">Become an Affiliate</a>
-                    </p>
-                    <p>
-                        <a href="#!">Shipping Rates</a>
-                    </p>
-                    <p>
-                        <a href="#!">Help</a>
-                    </p>
-                </div>
-
-                <!-- Grid column -->
-                <hr class="w-100 clearfix d-md-none">
-
-                <!-- Grid column -->
-                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-                    <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
-                    <p>
-                        <i class="fas fa-home mr-3"></i> Bnei Brack, Migdaly Shekel, IL
-                    </p>
-                    <p>
-                        <i class="fas fa-envelope mr-3"></i> ShimiFlegg@gmail.com
-                    </p>
-                    <p>
-                        <i class="fas fa-phone mr-3"></i> + 972 6523-613
-                    </p>
-                    <p>
-                        <i class="fas fa-print mr-3"></i> + 972-543-540-144
-                    </p>
-                </div>
-                <!-- Grid column -->
-
-            </div>
-            <!-- Footer links -->
-
-            <hr>
-
-            <!-- Grid row -->
-            <div class="row d-flex align-items-center">
-
-                <!-- Grid column -->
-                <div class="col-md-7 col-lg-8">
-
-                    <!--Copyright-->
-
-                </div>
-                <!-- Grid column -->
-                <!-- Grid column -->
-                <!-- Grid column -->
-
-            </div>
-            <!-- Grid row -->
-
+    <footer class="footer">
+        <div>
+            <p class="footer-link" onclick="homeView()">
+                HolidAI
+            </p>
         </div>
-        <!-- Footer Links -->
-
+        <div>
+            <p class="footer-link" onclick="aboutView()">
+                About
+            </p>
+        </div>
+        <div>
+            <p>
+                CS 2019 Final project
+            </p>
+        </div>
     </footer>
     <!-- Footer -->
+
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/js/bootstrap.js"></script>
